SONARPY-2299 Fix S3801 false positive for match statements with exhaustive coverage (#1020)
GitOrigin-RevId: 88a3b5e788bbe41167ebd49be451ee2a7f3c7f37